--- a/admin/.env
+++ b/admin/.env
@@ -1,2 +1,3 @@
 VITE_CURRENCY = '₹'
-VITE_BACKEND_URL = 'http://localhost:4000'
+# VITE_BACKEND_URL = 'http://localhost:4000'
+VITE_BACKEND_URL = 'https://prescripto-c9lx.onrender.com'
