--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
-VITE_BACKEND_URL = 'http://localhost:4000'
+# VITE_BACKEND_URL = 'http://localhost:4000'
+VITE_BACKEND_URL = 'https://prescripto-c9lx.onrender.com'
 VITE_RAZORPAY_KEY_ID = 'rzp_test_qDm8WDpa7wDaBA'
