--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "date-fns": "^4.1.0",
     "frontend": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
